backport: re PR tree-optimization/48822 (G++ gets stucks and never finishes compilation when enabling -O2/3 optimization options.)

2011-07-04  Richard Guenther  <rguenther@suse.de>

        Backport from mainline
        2011-05-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/48822
	* tree-ssa-sccvn.c (set_ssa_val_to): Never go up the lattice.

	* gcc.dg/torture/pr48822.c: New testcase.

From-SVN: r175813